--- a/Natours/index.html
+++ b/Natours/index.html
@@ -27,6 +27,20 @@
       </div>
     </header>
 
+    <main>
+      <section class="section-about">
+        <div class="u-center-text u-margin-bottom-8">
+          <h2 class="heading-secondary">
+            Exciting tours for adventurous people
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-2">Text content</div>
+          <div class="col-1-of-2">Image Composition</div>
+        </div>
+      </section>
+    </main>
+
     <!-- <section class="grid-test">
       <div class="row">
         <div class="col-1-of-2">Col 1 of 2</div>
