--- a/Natours/index.html
+++ b/Natours/index.html
@@ -88,9 +88,27 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/nat-1-large.jpg" alt="Photo 1" class="composition__photo composition__photo--p1">
-              <img src="img/nat-2-large.jpg" alt="Photo 2" class="composition__photo composition__photo--p2">
-              <img src="img/nat-3-large.jpg" alt="Photo 3" class="composition__photo composition__photo--p3">
+              <img 
+                srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w" 
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw 300px"
+                alt="Photo 1" 
+                class="composition__photo composition__photo--p1"
+                src="img/nat-1-large.jpg"
+              >
+              <img 
+                srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w" 
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw 300px"
+                alt="Photo 2" 
+                class="composition__photo composition__photo--p2"
+                src="img/nat-2-large.jpg"
+              >
+              <img 
+                srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w" 
+                sizes="(max-width: 900px) 20vw, (max-width: 600px) 30vw 300px"
+                alt="Photo 3" 
+                class="composition__photo composition__photo--p3"
+                src="img/nat-3-large.jpg"
+              >
             </div>
           </div>
         </div>
@@ -338,7 +356,7 @@
       <div class="footer__logo-box">
         <picture class="footer__logo">
           <source srcset="img/logo-green-small-1x.png 1x, img/logo-green-small-2x.png 2x" media="(max-width: 37.5em)">
-          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo">
+          <img srcset="img/logo-green-1x.png 1x, img/logo-green-2x.png 2x" alt="Full logo" class="footer__logo" src="img/logo-green-2x.png">
         </picture>
       </div>
       <div class="row">
