74. Building the Overall Layout

--- a/trillo/index.html
+++ b/trillo/index.html
@@ -11,6 +11,18 @@
         <title>trillo &mdash; Your all-in-one booking app</title>
     </head>
     <body>
-        Trillo
+        <div class="container">
+            <header class="header">
+                Header part
+            </header>
+            <div class="content">
+                <div class="sidebar">
+                    Navigation
+                </div>
+                <main class="hotel-view">
+                    Hotel view
+                </main>
+            </div>
+        </div>
     </body>
 </html>
