--- a/trillo/index.html
+++ b/trillo/index.html
@@ -46,7 +46,7 @@
             <div class="content">
                 <div class="sidebar">
                     <ul class="side-nav">
-                        <li class="side-nav__item">
+                        <li class="side-nav__item side-nav__item--active">
                             <a href="" class="side-nav__link">
                                 <svg class="side-nav__icon">
                                     <use xlink:href="img/sprite.svg#icon-home"></use>
