110. Building the Story Section - Part 1

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -79,7 +79,12 @@
         </div>
 
         <div class="story__content">
-            story content
+            <h3 class="heading-3 mb-sm">Happy Customers</h3>
+            <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decision of our lives&rdquo;</h2>
+            <p class="story__text">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus pariatur voluptatibus. Quidem consequatur harum volupta!
+            </p>
+            <button class="btn">Find your own home</button>
         </div>
 
         <section class="homes">
