111. Building the Story Section - Part 2

--- a/nexter/index.html
+++ b/nexter/index.html
@@ -75,7 +75,8 @@
         </section>
 
         <div class="story__pictures">
-            story pictures
+            <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1">
+            <img src="img/story-2.jpeg" alt="New house" class="story__img--2">
         </div>
 
         <div class="story__content">
